# rust_aws_cognito_passwordless_login

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md
.github/workflows/: terraform.yml
client/: Cargo.toml
client/src/: main.rs
create_auth_challenge/: Cargo.toml
create_auth_challenge/src/: main.rs
define_auth_challenge/: Cargo.toml
define_auth_challenge/src/: main.rs
log/: Cargo.toml
log/src/: lib.rs
pre_signup/: Cargo.toml
pre_signup/src/: main.rs
terraform/: backend.tf  cognito.tf  lambda_create_auth_challenge.tf  lambda_define_auth_challenge.tf  lambda_pre_signup.tf  lambda_verify_auth_challenge.tf  main.tf  s3.tf  s3_lambda_deploys.tf  s3_terraform_state.tf  ses.tf
verify_auth_challenge/: Cargo.toml
verify_auth_challenge/src/: main.rs
