[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.47.0"
rusoto_cognito_idp = "0.47.0"
openssl = { version = "0.10", features = ["vendored"] }
uuid = { version = "0.8.2", features = ["v4"] }