[package]
name = "log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.19"
tracing-subscriber = "0.3"
tracing-futures = "0.2.0"
tracing-appender = "0.2.0"
tracing-bunyan-formatter = "0.3.2"