[package]
name = "verify_auth_challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = { git = "https://github.com/PoorlyDefinedBehaviour/aws-lambda-events-1", branch = "test_1" }
tokio = "1.17.0"
lambda_runtime = "0.5.0"
tracing = "0.1.19"
log = { path = "../log" }
serde_json = "1.0.79"